# KerNix

./: README.md
clear/: .gitignore  README.md  clearcls.cast  cls.c  meson.build
clear/docs/manpage/: cls.1
mount/: README.md  linkfs.c  meson.build
type/: .gitignore  README.md  kind.c  meson.build
type/manpage/: kind.1  kind.en.1
wc/: meson.build  woc.c
